--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
                 <div class="social-links">
                     <img id="social_img" src="images/redes_sociais.png" alt="redes_sociais">
                     <h3>Onde me achar</h3>
-
+                    <a target="_blank" href="#">Email: pedro.hasler@gmail.com</a>
                     <a target="_blank" href="https://www.linkedin.com/in/pedrofhasler/">LinkedIn: @pedrofhasler</a>
                     <a target="_blank" href="https://github.com/pedrofhasler">GitHub: @pedrofhasler</a>
                     <a target="_blank" href="https://www.kaggle.com/pedrofhasler">Kaggle: @pedrofhasler</a>
