dots-wrapper update

--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Russo+One&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@500&display=swap" rel="stylesheet">
+
+    <!-- Preloading the css variable files to prevent the delay in changing theme when the site is first loaded -->
+	<link rel="stylesheet" type="text/css" href="purple.css">
+	<link rel="stylesheet" type="text/css" href="green.css">
+	<link rel="stylesheet" type="text/css" href="blue.css">
     
     <link rel="stylesheet" type="text/css" href="default.css">
 
@@ -24,14 +29,17 @@
             </div>
             <div class="intro-wrapper">
                 <div class="nav-intro">
-                    <div class="dots-wrapper">
-                        <div id="dot-1" class="browser-dot"></div>
-                        <div id="dot-2" class="browser-dot"></div>
-                        <div id="dot-3" class="browser-dot"></div>
-                    </div>
+
+                    <a href="index.html">
+                        <div class="dots-wrapper">
+                            <div id="dot-1" class="browser-dot"></div>
+                            <div id="dot-2" class="browser-dot"></div>
+                            <div id="dot-3" class="browser-dot"></div>
+                        </div>
+                    </a>
 
                     <ul id="navigation">
-                        <li><a href="#">Contact</a></li>
+                        <li><a href="index.html#contact">Contact</a></li>
                     </ul>
                 </div>
                 <div class="left-column">
