contact link bug-fix

--- a/index.html
+++ b/index.html
@@ -163,6 +163,8 @@
             <h3 style="text-align: center;">Entre em contato</h3>
 
             <form id="contact-form" action="">
+                <a name="contact"></a>
+                
                 <label>Nome</label>
                 <input class="input-field" type="text" name="name">
                 
